# eino-ops-agent

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  go.mod  go.sum
.github/workflows/: desktop.yml
cmd/ops-agent/: main.go  main_test.go
configs/: config.example.yaml  policy.yaml
docs/: architecture.md  demo.md
internal/agent/: context.go  model_client.go  reviewer.go  reviewer_test.go  runtime.go  runtime_test.go  tool_errors.go  tools.go  tools_test.go
internal/config/: bootstrap.go  config.go  config_test.go
internal/domain/: prompt.go  prompt_test.go  types.go
internal/httpapi/: auth_test.go  logging_test.go  server.go  stream_test.go  workspace_events_test.go
internal/ids/: ids.go
internal/mcpserver/: server.go  server_test.go
internal/observability/: logging.go  logging_test.go
internal/policy/: engine.go  engine_test.go
internal/proxyx/: http.go  http_test.go
internal/security/: crypto.go  crypto_test.go  redact.go  web_auth.go  web_auth_test.go
internal/service/: context.go  directory_sync_unix.go  directory_sync_windows.go  files.go  files_test.go  mcp.go  mcp_test.go  models.go  service.go  service_test.go  skills.go  ssh.go  tools.go  transfers.go  transfers_test.go  websearch.go  websearch_test.go  workspace.go  workspace_test.go
internal/skills/: library.go  registry.go  registry_test.go  skill.go
web/: embed.go  embed_test.go  index.html  package-lock.json  package.json
web/src/: App.tsx  (+4 more)
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs  main.rs
(+27 files in other folders)
